# LingBao-Anti-Hallucination-Pipeline

./: COMMERCIAL_LICENSE.md  LICENSE  README.md  pyproject.toml
pipeline/: __init__.py  cli.py
pipeline/agents/: __init__.py  base.py
pipeline/core/: __init__.py  file_protocol.py  gate.py  scheduler.py
pipeline/models/: __init__.py  document.py
